tests/parser/invalid/unknown_type.src
fn main() {
    unknown_type x = 42;  // Ошибка: неизвестный тип
    return 0;
}